// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`media.ts: Collection + Dimensions => complete 1`] = `
Object {
  "content": Array [
    Object {
      "attrs": Object {
        "layout": "align-start",
        "width": null,
      },
      "content": Array [
        Object {
          "attrs": Object {
            "__contextId": null,
            "__displayType": null,
            "__external": false,
            "__fileMimeType": "image/jpeg",
            "__fileName": "example.png",
            "__fileSize": null,
            "alt": "",
            "collection": "MediaServicesDemoCollection",
            "height": 1500,
            "id": "1234-5678-abcd-efgh",
            "occurrenceKey": null,
            "type": "file",
            "url": null,
            "width": 2265,
          },
          "type": "media",
        },
      ],
      "type": "mediaSingle",
    },
    Object {
      "type": "paragraph",
    },
  ],
  "type": "doc",
}
`;

exports[`media.ts: Collection + Dimensions => uploading 1`] = `
Object {
  "content": Array [
    Object {
      "attrs": Object {
        "layout": "align-start",
        "width": null,
      },
      "content": Array [
        Object {
          "attrs": Object {
            "__contextId": null,
            "__displayType": null,
            "__external": false,
            "__fileMimeType": "image/jpeg",
            "__fileName": "example.png",
            "__fileSize": null,
            "alt": "",
            "collection": "InitialCollectionForTesting",
            "height": 1500,
            "id": "1234-5678-abcd-efgh",
            "occurrenceKey": null,
            "type": "file",
            "url": null,
            "width": 2265,
          },
          "type": "media",
        },
      ],
      "type": "mediaSingle",
    },
    Object {
      "type": "paragraph",
    },
  ],
  "type": "doc",
}
`;

exports[`media.ts: Collection + No dimension => complete 1`] = `
Object {
  "content": Array [
    Object {
      "attrs": Object {
        "layout": "align-start",
        "width": null,
      },
      "content": Array [
        Object {
          "attrs": Object {
            "__contextId": null,
            "__displayType": null,
            "__external": false,
            "__fileMimeType": "image/jpeg",
            "__fileName": "example.png",
            "__fileSize": null,
            "alt": "",
            "collection": "MediaServicesDemoCollection",
            "height": 200,
            "id": "1234-5678-abcd-efgh",
            "occurrenceKey": null,
            "type": "file",
            "url": null,
            "width": 250,
          },
          "type": "media",
        },
      ],
      "type": "mediaSingle",
    },
    Object {
      "type": "paragraph",
    },
  ],
  "type": "doc",
}
`;

exports[`media.ts: Collection + No dimension => uploading 1`] = `
Object {
  "content": Array [
    Object {
      "attrs": Object {
        "layout": "align-start",
        "width": null,
      },
      "content": Array [
        Object {
          "attrs": Object {
            "__contextId": null,
            "__displayType": null,
            "__external": false,
            "__fileMimeType": "image/jpeg",
            "__fileName": "example.png",
            "__fileSize": null,
            "alt": "",
            "collection": "InitialCollectionForTesting",
            "height": 200,
            "id": "1234-5678-abcd-efgh",
            "occurrenceKey": null,
            "type": "file",
            "url": null,
            "width": 250,
          },
          "type": "media",
        },
      ],
      "type": "mediaSingle",
    },
    Object {
      "type": "paragraph",
    },
  ],
  "type": "doc",
}
`;

exports[`media.ts: Empty collection + Dimensions => complete 1`] = `
Object {
  "content": Array [
    Object {
      "attrs": Object {
        "layout": "align-start",
        "width": null,
      },
      "content": Array [
        Object {
          "attrs": Object {
            "__contextId": null,
            "__displayType": null,
            "__external": false,
            "__fileMimeType": "image/jpeg",
            "__fileName": "example.png",
            "__fileSize": null,
            "alt": "",
            "collection": "",
            "height": 1500,
            "id": "1234-5678-abcd-efgh",
            "occurrenceKey": null,
            "type": "file",
            "url": null,
            "width": 2265,
          },
          "type": "media",
        },
      ],
      "type": "mediaSingle",
    },
    Object {
      "type": "paragraph",
    },
  ],
  "type": "doc",
}
`;

exports[`media.ts: Empty collection + Dimensions => uploading 1`] = `
Object {
  "content": Array [
    Object {
      "attrs": Object {
        "layout": "align-start",
        "width": null,
      },
      "content": Array [
        Object {
          "attrs": Object {
            "__contextId": null,
            "__displayType": null,
            "__external": false,
            "__fileMimeType": "image/jpeg",
            "__fileName": "example.png",
            "__fileSize": null,
            "alt": "",
            "collection": "InitialCollectionForTesting",
            "height": 1500,
            "id": "1234-5678-abcd-efgh",
            "occurrenceKey": null,
            "type": "file",
            "url": null,
            "width": 2265,
          },
          "type": "media",
        },
      ],
      "type": "mediaSingle",
    },
    Object {
      "type": "paragraph",
    },
  ],
  "type": "doc",
}
`;

exports[`media.ts: Empty collection + No dimension => complete 1`] = `
Object {
  "content": Array [
    Object {
      "attrs": Object {
        "layout": "align-start",
        "width": null,
      },
      "content": Array [
        Object {
          "attrs": Object {
            "__contextId": null,
            "__displayType": null,
            "__external": false,
            "__fileMimeType": "image/jpeg",
            "__fileName": "example.png",
            "__fileSize": null,
            "alt": "",
            "collection": "",
            "height": 1500,
            "id": "1234-5678-abcd-efgh",
            "occurrenceKey": null,
            "type": "file",
            "url": null,
            "width": 2265,
          },
          "type": "media",
        },
      ],
      "type": "mediaSingle",
    },
    Object {
      "type": "paragraph",
    },
  ],
  "type": "doc",
}
`;

exports[`media.ts: Empty collection + No dimension => uploading 1`] = `
Object {
  "content": Array [
    Object {
      "attrs": Object {
        "layout": "align-start",
        "width": null,
      },
      "content": Array [
        Object {
          "attrs": Object {
            "__contextId": null,
            "__displayType": null,
            "__external": false,
            "__fileMimeType": "image/jpeg",
            "__fileName": "example.png",
            "__fileSize": null,
            "alt": "",
            "collection": "InitialCollectionForTesting",
            "height": 200,
            "id": "1234-5678-abcd-efgh",
            "occurrenceKey": null,
            "type": "file",
            "url": null,
            "width": 250,
          },
          "type": "media",
        },
      ],
      "type": "mediaSingle",
    },
    Object {
      "type": "paragraph",
    },
  ],
  "type": "doc",
}
`;
